# ModularAudioNative

./: Cargo.toml  LICENSE  README.md  build.rs
doc/: book.toml
lib/: portaudio.lib
main/: Cargo.toml  build.rs
main/res/builtins/: root.moddl
main/src/: calc.rs  common.rs  core.rs  main.rs  moddl.rs  node.rs  operator.rs  seq.rs  wave.rs
main/src/common/: stack.rs  util.rs
main/src/core/: common.rs  context.rs  delay_buffer.rs  event.rs  machine.rs  node.rs  node_factory.rs  node_host.rs  util.rs
main/src/mml/: default.rs
main/src/mml/default/: feature.rs  sequence_generator.rs
main/src/moddl/: builtin.rs  common.rs  console.rs  error.rs  evaluator.rs  executor.rs  function.rs  import.rs  import_cache.rs  io.rs  lambda_function.rs  node_factory.rs  path.rs  player.rs  player_context.rs  player_option.rs  player_output.rs  scope.rs  value.rs
main/src/node/: arith.rs  audio.rs  common.rs  cond.rs  delay.rs  env.rs  envelope.rs  event_scheduler.rs  feedback.rs  file.rs  filter.rs  freq.rs  lofi.rs  noise.rs  osc.rs  prev.rs  prim.rs  stereo.rs  system.rs  test.rs  thread.rs  transit.rs  util.rs  var.rs  wave.rs
main/src/seq/: common.rs  context.rs  instruction.rs  sequence.rs  sequencer.rs  tick.rs
main/src/vis/: visualizer.rs
main/src/wave/: wav_reader.rs  waveform.rs  waveform_host.rs  waveform_player.rs
moddl/: 4_test.moddl  adsr.moddl  array.moddl  assoc.moddl  default_labels.moddl  delay.moddl  delay2.moddl  delay3.moddl  delay4.moddl  detune.moddl  detune1.moddl  drums.moddl  effect.moddl  error1.moddl  feedback1.moddl  ff3_theme.moddl  filter.moddl  filter_func.moddl  fm.moddl  groove.moddl  groove2.moddl  if.moddl  if2.moddl  import.moddl  io1.moddl  label_filter1.moddl  labels.moddl  labels2.moddl  lambda.moddl  lambda_func.moddl  letAll.moddl  letAll_lib.moddl  log.moddl  macro.moddl  nesOscs.moddl  sample_crush.moddl  sample_crush2.moddl  sample_crush3.moddl  slur.moddl  song.20240107.moddl  (+18 more)
node_macro/: Cargo.toml
node_macro/src/: lib.rs
node_macro_impl/: Cargo.toml
parser/: Cargo.toml
parser/src/: common.rs  lib.rs  mml.rs
parser/src/mml/: ast.rs  default_mml_parser.rs
parser/src/moddl/: ast.rs  parser.rs
src/: common.rs  core.rs  main.rs  moddl.rs  musical.rs  node.rs  sequencer.rs  wave.rs
(+51 files in other folders)
