[package]
name = "modular_audio"
version = "0.1.0"
authors = ["bolta <freshness.and.speed.2007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node_macro = { path = "../node_macro" }
parser = { path = "../parser" }

mopa = "*"
nom = { version = "*", features = ["regexp"] }
portaudio = "*"
rand = "*"
regex = "^1"
ringbuf = "*"
wav = "*"