[package]
name = "moddl"
version = "0.1.0"
authors = ["bolta <freshness.and.speed.2007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node_macro = { path = "../node_macro" }
parser = { path = "../parser" }

itertools = "0.10.3"
mopa = "*"
portaudio = "*"
rand = "*"
regex = "^1"
ringbuf = "*"
wav = "*"

graphviz-rust = "0.6.1"
nom = "7.1.3"
nom-regex = "0.2.0"
nom_locate = "4.2.0"
enum-display = "0.1.3"

[profile.release]
# debug = 1
