[package]
name = "node_macro"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
node_macro_impl = { path = "../node_macro_impl" }
proc-macro2 = { version = "1.0.28" }
quote = { version = "1.0.9" }
syn = { version = "1.0.75", features = ["full", "extra-traits"] }
