[package]
name = "parser"
version = "0.1.0"
authors = ["bolta <freshness.and.speed.2007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom-regex = "0.2.0"
nom_locate = "4.2.0"
# nom_locate = "*"
regex = "^1"
